--- a/app/global.css
+++ b/app/global.css
@@ -12,7 +12,9 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 0%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 h1 {
