--- a/app/components/header.css
+++ b/app/components/header.css
@@ -1,13 +1,28 @@
+.header {
+    display: 'flex';
+    justify-content: 'center';
+    align-items: 'center';
+    width: 100%;
+    height: 10vw;
+    background-color: #000000;
+}
+
 .header-text {
     position: relative;
-    top: 3.37vw;
+    top: 2.8vw;
     margin: 0;
     font-size: 5.4vw;
+    text-align: center;
+    transform: translateX(-1%);
 }
 
 @media (max-width: 768px) {
     .header-text {
         top: 3.1vw;
         font-size: 6vw; 
+        transform: translateX(0%);
+    }
+    .header {
+        height: 11.3vw;
     }
 }
