--- a/app/components/header.css
+++ b/app/components/header.css
@@ -4,6 +4,7 @@
     align-items: 'center';
     width: 100%;
     height: 10vw;
+    height: 10dvw;
     background-color: #000000;
 }
 
@@ -12,6 +13,7 @@
     top: 2.8vw;
     margin: 0;
     font-size: 5.4vw;
+    font-size: 5.4dvw;
     text-align: center;
     transform: translateX(-1%);
 }
@@ -20,9 +22,11 @@
     .header-text {
         top: 3.1vw;
         font-size: 6vw; 
+        font-size: 6dvw; 
         transform: translateX(0%);
     }
     .header {
         height: 11.3vw;
+        height: 11.3dvw;
     }
 }
