--- a/app/components/header.css
+++ b/app/components/header.css
@@ -6,6 +6,7 @@
     height: 10vw;
     height: 10dvw;
     background-color: #000000;
+    flex-shrink: 0;
 }
 
 .header-text {
@@ -30,3 +31,4 @@
         height: 11.3dvw;
     }
 }
+
