--- a/app/components/presentationBox.css
+++ b/app/components/presentationBox.css
@@ -1,6 +1,6 @@
 .present-box {
     background-color: #fbe9fa99;
-    border-radius: 30px;
+    border-radius: 3vw;
     margin: 5%;
     padding: 2%;
     width: 90vw;
@@ -10,7 +10,7 @@
 
 .present-box > img {
     max-width: 30%;
-    border-radius: 30px;
+    border-radius: 3vw;
 }
 
 .text-container {
@@ -24,7 +24,7 @@
 }
 
 .text-container h2 {
-    margin-bottom: 10px;
+    margin-bottom: 0.3vw;
 }
 
 .text-container p {
