--- a/app/components/presentationBox.css
+++ b/app/components/presentationBox.css
@@ -19,7 +19,7 @@
     padding: 1%;
     margin: 1%;
     justify-content: flex-start;
-    transform: translateY(-30px);
+    transform: translateY(-15%);
     font-size: 1.5vw;
 }
 
