--- a/app/components/presentationBox.css
+++ b/app/components/presentationBox.css
@@ -30,3 +30,9 @@
 .text-container p {
     margin-top: 0;
 }
+
+@media (max-width: 768px) {
+    .text-container {
+        font-size: 2.5vw;
+    }
+}
