--- a/app/components/presentationBox.css
+++ b/app/components/presentationBox.css
@@ -1,19 +1,23 @@
 .present-box {
     background-color: #fbe9fa99;
-    border-radius: 3vw;
-    margin: 2%;
-    padding: 1%;
-    width: 90vw;
+    border-radius: 50px;
+    margin: 10px;
+    padding: 15px;
+    max-width: 1000px;
     height: 100%;
     display: flex;
 }
 
-.present-box > img {
+.display-image-holder {
+    min-width: 30%;
     max-width: 30%;
     height: auto;
-    border-radius: 3vw;
-    object-fit: contain;
-    box-sizing: border-box;
+    align-content: center;
+}
+
+.display-image {
+    width: 100%;
+    border-radius: 50px;
 }
 
 .text-container {
@@ -22,12 +26,12 @@
     padding: 1%;
     margin: 1%;
     justify-content: flex-start;
-    transform: translateY(-15%);
-    font-size: 1.8vw;
+    transform: translateY(-20px);
+    font-size: 20px;
 }
 
 .text-container h2 {
-    margin-bottom: 0.3vw;
+    margin-bottom: 5px;
 }
 
 .text-container p {
@@ -37,6 +41,6 @@
 
 @media (max-width: 768px) {
     .text-container {
-        font-size: 2.5vw;
+        transform: translateY(0px);
     }
 }
